# pear

./: CLAUDE.md  CMakeLists.txt  README.md
src/: common.h  elf.c  elf.h  main.c  rv64_decode.c  rv64_disasm.c  rv64_hw.c  rv64_hw.h  rv64_interp.c  rv64_opcodes.h  rv64gc.c  rv64gc.h  syscalls.c  syscalls.h
src/riscv/: csr.c  csr.h  disasm.c  disasm.h  interp.c  interp.h  mem.c  mem.h  rv32gc.c  rv32gc.h  syscalls.c  syscalls.h
tests/: CMakeLists.txt  fibonacci.c  hello_usermode.c  linker.ld  simple_exit.c  usermode.ld
